test/compile_error/typemismatch.conf.9.def
config type_mismatch_conf {
	ipv4val : ipv4addr = 1:3:4:5::;
}
